syntax = "proto3";

option csharp_namespace = "GrpcServer";

service Customer {
  rpc GetCustomerInfo (CustomerLookupModel) returns (CustomerInfo);
  rpc GetNewCustomers (NewCustomersRequest) returns (stream CustomerInfo);
}

message NewCustomersRequest{
}

message CustomerLookupModel {
  int32 customerId = 1;
}

message CustomerInfo {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  bool isAlive = 4;
  int32 age = 5;
}
